--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
   "name": "api-bitrue",
   "version": "0.6.14",
-  "description": "Non-official implementation of Bitrue's API's",
+  "description": "Non-official implementation of Bitrue's API's. Developed for personal use.",
   "main": "index.js",
-  "keywords": [
-    "bitrue",
-    "api",
-    "axios",
-    "REST",
-    "socket"
-  ],
-  "directories": {
-    "lib": "lib"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" "
+    "test": "test.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/alexander-hagen/node-api-bitrue.git"
   },
+  "keywords": [
+    "nodejs",
+    "websocket",
+    "bitrue"
+  ],
   "author": "Alexander Hagen",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/alexander-hagen/node-api-bitrue/issues"
   },
   "homepage": "https://github.com/alexander-hagen/node-api-bitrue#readme",
-  "engines": {
-    "node": ">= 16.x.x"
+  "dependencies": {
+    "axios": "^1.6.7",
+    "pako": "^2.1.0",
+    "ws": "^8.16.0"
   }
 }
