--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Non-official implementation of Bitrue's API's. Developed for personal use.",
   "main": "index.js",
   "scripts": {
-    "test": "node test.js"
+    "test": "jest --coverage --passWithNoTests"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,8 @@
     "axios": "^1.6.7",
     "pako": "^2.1.0",
     "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
