--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "node-api-bitrue",
-  "version": "0.6.21",
+  "version": "0.6.22",
   "description": "Non-official implementation of Bitrue's API's. Developed for personal use.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --passWithNoTests --verbose"
+    "test": "jest --coverage --passWithNoTests --verbose",
+    "badges": "istanbul-badges-readme --colors=red:50,yellow:80",
+    "patch": "npm version patch --no-git-tag-version"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^17.2.2",
+    "istanbul-badges-readme": "^1.9.0",
     "pako": "^2.1.0",
     "ws": "^8.16.0"
   },
