--- a/.github/workflows/dependabot_auto-merge.yml
+++ b/.github/workflows/dependabot_auto-merge.yml
@@ -3,6 +3,7 @@ name: Auto-merge Dependabot PRs
 on:
   pull_request:
     types: [opened, reopened, synchronize]
+  workflow_dispatch:
 
 permissions:
   contents: write
