--- a/.github/workflows/dependabot_auto-merge.yml
+++ b/.github/workflows/dependabot_auto-merge.yml
@@ -11,27 +11,12 @@ permissions:
 
 jobs:
   dependabot-auto-merge:
-    if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Enable auto-merge for Dependabot PR
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          name: Auto-merge Dependabot PRs
-
-on:
-  pull_request:
-    types: [opened, reopened, synchronize]
-
-permissions:
-  contents: write
-  pull-requests: write
-
-jobs:
-  dependabot-auto-merge:
-    if: github.actor == 'dependabot[bot]'
-    runs-on: ubuntu-latest
+    # Guard: only auto-merge Dependabot PRs
+    if: >
+      github.event_name == 'pull_request' &&
+      github.actor == 'dependabot[bot]'
 
     steps:
       - name: Enable auto-merge for Dependabot PR
