--- a/.github/workflows/dependabot_auto-merge.yml
+++ b/.github/workflows/dependabot_auto-merge.yml
@@ -21,6 +21,7 @@ jobs:
       - name: Enable auto-merge for Dependabot PR
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_REPO: ${{ github.repository }}
           PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
           gh pr merge "$PR_URL" --auto --squash
