--- a/.github/workflows/dependabot_auto-merge.yml
+++ b/.github/workflows/dependabot_auto-merge.yml
@@ -18,10 +18,11 @@ jobs:
        github.actor == 'dependabot[bot]')
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Enable auto-merge for Dependabot PR
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_REPO: ${{ github.repository }}
           PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
           gh pr merge "$PR_URL" --auto --squash
