--- a/.github/workflows/dependabot_auto-merge.yml
+++ b/.github/workflows/dependabot_auto-merge.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     types: [opened, reopened, synchronize]
   workflow_dispatch:
+    inputs:
+      pr_number:
+        description: 'Dependabot PR number to auto-merge'
+        required: false
 
 permissions:
   contents: write
@@ -20,9 +24,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Enable auto-merge for Dependabot PR
+      - name: Enable auto-merge
+        if: >
+          (github.event_name == 'pull_request' &&
+           github.actor == 'dependabot[bot]') ||
+          (github.event_name == 'workflow_dispatch' &&
+           inputs.pr_number != '')
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
         run: |
-          gh pr merge "$PR_URL" --auto --squash
+          if [ "${{ github.event_name }}" = "pull_request" ]; then
+            gh pr merge "${{ github.event.pull_request.number }}" --auto --squash
+          else
+            gh pr merge "${{ inputs.pr_number }}" --auto --squash
+          fi
